# green-go

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  green-go-demo.html  main.py  pyproject.toml
agent/: agent.py  dummy_data.py  models.py  run.py
backend/app/agent/: agent.py  models.py  run.py
backend/app/connectors/: enode.py  enode_client.py  watt_time.py  watttime_client.py
backend/app/schemas/: battery.py  charger.py
backend/data/: observation_bundle_example.json
data/: observation_bundle_example.json
src/: enode.py  watt_time.py
src/datatypes/: hvac.py
src/types/: moer_forecast.py
