[project]
name = "greengo"
version = "0.1.0"
description = "Home Energy Management Agent — minimizes marginal grid emissions via smart device scheduling"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "watttime",
    "pytz"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
